--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -38,9 +38,13 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
 
+      # Set up Docker build
+      - name: Set up Docker Build
+        uses: docker/setup-buildx-action@v1
+
+      - name: Get token
+        run: echo ${{ secrets.GIT_TOKEN }} > git_token.txt
+
       # Build docker image
       - name: Build Docker image
-        run: |
-          cd docker
-          echo ${{ secrets.GIT_TOKEN }} > git_token.txt
-          docker buildx build . -t jhudsl/course_template:latest
+        uses: docker/build-push-action@v2
