--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -45,12 +45,16 @@ jobs:
       - name: Set up Docker Build
         uses: docker/setup-buildx-action@v1
 
+      - name: Get Token
+        run: echo ${{ secrets.GIT_TOKEN }} > git_token.txt
+
       # Build docker image
       - name: Build Docker image
-        run: |
-          cd docker
-          echo ${{ secrets.GIT_TOKEN }} > git_token.txt
-          docker buildx build . -t jhudsl/course_template:latest
+        uses: docker/build-push-action@v2
+
+      # Push the Docker image
+      - name: Push Docker image
+        run: docker push jhudsl/course_template
 
       # Run bookdown rendering
       - name: Run bookdown render
@@ -102,7 +106,3 @@ jobs:
           git config --local user.name "GitHub Actions"
           git add -A
           git commit -m 'Downloaded Google Slide Images' || echo "No changes to commit"
-
-      # Push the Docker image
-      - name: Push Docker image
-        run: docker push jhudsl/course_template
