--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -48,3 +48,9 @@ jobs:
       # Build docker image
       - name: Build Docker image
         uses: docker/build-push-action@v2
+          with:
+            push: false
+            load: true
+            context: docker
+            file: docker/Dockerfile
+            tags: jhudsl/course_template
