--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -51,6 +51,12 @@ jobs:
       # Build docker image
       - name: Build Docker image
         uses: docker/build-push-action@v2
+          with:
+            push: false
+            load: true
+            context: docker
+            file: docker/Dockerfile
+            tags: jhudsl/course_template
 
       # Push the Docker image
       - name: Push Docker image
