--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -43,7 +43,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Get token
-        run: echo ${{ secrets.GIT_TOKEN }} > git_token.txt
+        run: echo ${{ secrets.GIT_TOKEN }} > docker/git_token.txt
 
       # Build docker image
       - name: Build Docker image
