--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -29,11 +29,6 @@ jobs:
           # use github PAT
           token: ${{ secrets.GIT_TOKEN }}
 
-      - name: test keys
-        run: |
-          echo ${{ secrets.GOOGLE_SLIDE_ID }}
-          echo ${GITHUB_REPOSITORY}
-
       # Login to Dockerhub
       - name: Login to DockerHub
         uses: docker/login-action@v1
@@ -46,7 +41,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Get Token
-        run: echo ${{ secrets.GIT_TOKEN }} > git_token.txt
+        run: echo ${{ secrets.GIT_TOKEN }} > docker/git_token.txt
 
       # Build docker image
       - name: Build Docker image
