--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -29,11 +29,6 @@ jobs:
           # use github PAT
           token: ${{ secrets.GIT_TOKEN }}
 
-      - name: test keys
-        run: |
-          echo ${{ secrets.GOOGLE_SLIDE_ID }}
-          echo ${GITHUB_REPOSITORY}
-
       # Login to Dockerhub
       - name: Login to DockerHub
         uses: docker/login-action@v1
@@ -45,12 +40,22 @@ jobs:
       - name: Set up Docker Build
         uses: docker/setup-buildx-action@v1
 
+      - name: Get Token
+        run: echo ${{ secrets.GIT_TOKEN }} > docker/git_token.txt
+
       # Build docker image
       - name: Build Docker image
-        run: |
-          cd docker
-          echo ${{ secrets.GIT_TOKEN }} > git_token.txt
-          docker buildx build . -t jhudsl/course_template:latest
+        uses: docker/build-push-action@v2
+        with:
+          push: false
+          load: true
+          context: docker
+          file: docker/Dockerfile
+          tags: jhudsl/course_template
+
+      # Push the Docker image
+      - name: Push Docker image
+        run: docker push jhudsl/course_template
 
       # Run bookdown rendering
       - name: Run bookdown render
@@ -102,7 +107,3 @@ jobs:
           git config --local user.name "GitHub Actions"
           git add -A
           git commit -m 'Downloaded Google Slide Images' || echo "No changes to commit"
-
-      # Push the Docker image
-      - name: Push Docker image
-        run: docker push jhudsl/course_template
