--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -10,6 +10,8 @@ name: Build, Render, and Push
 # Controls when the action will run. Triggers the workflow on push
 # events only for the master branch
 on:
+  pull_request:
+    branches: [ main ]
   push:
     branches: [ main ]
 
@@ -41,7 +43,12 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Get Token
-        run: echo ${{ secrets.GIT_TOKEN }} > docker/git_token.txt
+        env:
+          GOOGLE_SLIDE_ID: ${{ secrets.GOOGLE_SLIDE_ID }}
+        run: |
+        echo ${{ secrets.GIT_TOKEN }} > docker/git_token.txt
+        echo "$GOOGLE_SLIDE_ID"
+        "$GOOGLE_SLIDE_ID"
 
       # Build docker image
       - name: Build Docker image
