--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -77,7 +77,7 @@ jobs:
       - name: Run google slide refresh script
         env:
           GOOGLE_SLIDE_ID: ${{ secrets.GOOGLE_SLIDE_ID }}
-          GOOGLE_SLIDE_TOKEN: ${{ secrets.GOOGLE_SLIDE_TOKEN }}
+          GOOGLE_SLIDE_ACCESS_TOKEN: ${{ secrets.GOOGLE_SLIDE_ACCESS_TOKEN }}
           GOOGLE_SLIDE_REFRESH_TOKEN: ${{ secrets.GOOGLE_SLIDE_REFRESH_TOKEN }}
         run: |
           docker run \
@@ -89,14 +89,14 @@ jobs:
             --image_key_dir resources \
             --git_repo ${GITHUB_REPOSITORY} \
             --git_branch ${GITHUB_REF#refs/heads/} \
-            --access_token "$GOOGLE_SLIDE_TOKEN" \
+            --access_token "$GOOGLE_SLIDE_ACCESS_TOKEN" \
             --refresh_token "$GOOGLE_SLIDE_REFRESH_TOKEN"
 
       # Refresh google slide code images
       - name: Download slides
         env:
           GOOGLE_SLIDE_ID: ${{ secrets.GOOGLE_SLIDE_ID }}
-          GOOGLE_SLIDE_TOKEN: ${{ secrets.GOOGLE_SLIDE_TOKEN }}
+          GOOGLE_SLIDE_ACCESS_TOKEN: ${{ secrets.GOOGLE_SLIDE_ACCESS_TOKEN }}
           GOOGLE_SLIDE_REFRESH_TOKEN: ${{ secrets.GOOGLE_SLIDE_REFRESH_TOKEN }}
         run: |
           docker run \
@@ -104,7 +104,7 @@ jobs:
           jhudsl/course_template:latest \
           Rscript --vanilla scripts/google_slide_png_downloader.R \
             --slides_id "$GOOGLE_SLIDE_ID" \
-            --access_token "$GOOGLE_SLIDE_TOKEN" \
+            --access_token "$GOOGLE_SLIDE_ACCESS_TOKEN" \
             --refresh_token "$GOOGLE_SLIDE_REFRESH_TOKEN"
 
       # Commit the google slide images just downloaded
