--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -72,7 +72,8 @@ jobs:
           git config --local user.name "GitHub Actions"
           git add -A
           git commit -m 'Render bookdown' || echo "No changes to commit"
-
+          git push origin main || echo "No changes to push"
+          
       # Refresh google slide code images
       - name: Run google slide refresh script
         env:
