Fix transfered files gha

--- a/.github/workflows/transfer-rendered-files.yml
+++ b/.github/workflows/transfer-rendered-files.yml
@@ -37,17 +37,26 @@ jobs:
           sudo apt-get install subversion
 
           # remove old docs/ files and folder
-          rm -r docs
+          rm -r manuscript
 
-          # Copy over files in docs
-          svn export https://github.com/${GITHUB_REPOSITORY}.git/branches/${GITHUB_REF#refs/heads/}/docs
+          # make manuscript directory
+          mkdir manuscript
 
           # Copy over any .bib files too!
           svn export https://github.com/${GITHUB_REPOSITORY}.git/branches/${GITHUB_REF#refs/heads/}/book.bib
           svn export https://github.com/${GITHUB_REPOSITORY}.git/branches/${GITHUB_REF#refs/heads/}/packages.bib
-          
-          # Also need .Rmd files for leanbuild (at least first time... then might need to manually update iframes etc)
-          svn export https://github.com/${GITHUB_REPOSITORY}.git/branches/${GITHUB_REF#refs/heads/}/*.Rmd
+
+          # Get list of Rmds needing to copy
+          rmd_list=$(find . -name '*.Rmd'  | grep '.Rmd')
+
+          for path in $rmd_list
+          do
+            # test that the path is to an Rmd file, error if not
+            [[ $path != *.Rmd ]] && echo "'$path' is not an .Rmd file." && exit 1
+            echo $path
+            svn export https://github.com/${GITHUB_REPOSITORY}.git/branches/${GITHUB_REF#refs/heads/}/manuscript/${path}
+          done
+
       - name: Create PR with rendered docs files
         uses: peter-evans/create-pull-request@v3
         id: cpr
