Make push optional

--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -12,6 +12,12 @@ on:
   pull_request:
     branches: [ main ]
     paths: [ docker/Dockerfile ]
+  workflow_dispatch:
+    inputs:
+      dockerhubpush:
+        description: 'Push to Dockerhub?'
+        required: true
+        default: 'false'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -54,3 +60,16 @@ jobs:
           context: docker
           file: docker/Dockerfile
           tags: jhudsl/course_template
+
+      # Login to Dockerhub
+      - name: Login to DockerHub
+        if: ${{ github.event.inputs.dockerhubpush != 'false' }}
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      # Push the Docker image
+       - name: Push Docker image
+         if: ${{ github.event.inputs.dockerhubpush != 'false' }}
+         run: docker push jhudsl/course_template
