have docker build retrigger based on changes to package list

--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -11,7 +11,7 @@ name: Test build of Dockerfile
 on:
   pull_request:
     branches: [ main ]
-    paths: [ docker/Dockerfile ]
+    paths: [ docker/Dockerfile, docker/github_package_list.tsv ]
   workflow_dispatch:
     inputs:
       dockerhubpush:
