Fixing Rmd copying (#140)
* Force new copies to overwrite old ones

* Fix file paths for SVN export

* Try to fix bash for loop

* Add back @

* revamp the whole thing

* Remove unnecessary sed

--- a/.github/workflows/transfer-rendered-files.yml
+++ b/.github/workflows/transfer-rendered-files.yml
@@ -49,12 +49,30 @@ jobs:
           svn export --force https://github.com/${GITHUB_REPOSITORY}.git/branches/${GITHUB_REF#refs/heads/}/_bookdown.yml
 
           # Get list of Rmds needing to copy
-          rmd_list=$(find . -name '*.Rmd'  | grep '.Rmd')
+          rmd_list=$(find . -name '*.Rmd'  | grep '.Rmd') > resources/rmd_list.txt
 
-          for path in $rmd_list
+          # the url from this repo where files will be downloaded from
+          base_url=https://${GIT_TOKEN}@raw.githubusercontent.com/${GITHUB_REPOSITORY}/${GITHUB_REF#refs/heads/}
+
+          # url for rmd_list.txt
+          list_url=${base_url}/resources/rmd_list.txt
+          echo $list_url
+​
+          # get the Rmd file list
+          rmd_paths=$(curl --fail -s ${list_url}) || echo "Error getting Rmd list at ${list_url}"
+          # error if the Rmd list is empty
+          [[ -z $rmd_paths ]] && echo "Rmd file list is empty." && exit 1
+​
+          # remove old Rmd files
+          rm $(find . -name '*.Rmd'  | grep '.Rmd' )
+​
+          # get new Rmd files and put them in the right place
+          for path in $rmd_paths
           do
-            echo Copying over $path
-            echo svn export --force https://github.com/${GITHUB_REPOSITORY}.git/branches/${GITHUB_REF#refs/heads/}/${path}
+            # test that the path is to an Rmd file, error if not
+            [[ $path != *.Rmd ]] && echo "'$path' is not an .Rmd file." && exit 1
+            echo $path
+            curl --fail -s ${base_url}/${path} > ${path}
           done
 
       - name: Create PR with rendered docs files
