--- a/.github/workflows/transfer-rendered-files.yml
+++ b/.github/workflows/transfer-rendered-files.yml
@@ -55,26 +55,15 @@ jobs:
           # the url from this repo where files will be downloaded from
           base_url=https://${GIT_TOKEN}@raw.githubusercontent.com/${GITHUB_REPOSITORY}/${GITHUB_REF#refs/heads/}
 
-          # url for rmd_list.txt
-          list_url=${base_url}/resources/rmd_list.txt
-          echo $list_url
-
-          # get the Rmd file list
-          rmd_paths=$(curl --fail -s ${list_url}) || echo "Error getting Rmd list at ${list_url}"
-          # error if the Rmd list is empty
-          [[ -z $rmd_paths ]] && echo "Rmd file list is empty." && exit 1
-
           # remove old Rmd files
           rm $(find . -name '*.Rmd'  | grep '.Rmd' )
 
-          # get new Rmd files and put them in the right place
-          for path in $rmd_paths
+          input="resources/rmd_list.txt"
+          while IFS= read -r line
           do
-            # test that the path is to an Rmd file, error if not
-            [[ $path != *.Rmd ]] && echo "'$path' is not an .Rmd file." && exit 1
-            echo $path
-            curl --fail -s ${base_url}/${path} > ${path}
-          done
+            echo "$line"
+            curl --fail -s ${base_url}/${line} > ${line}
+          done < "$input"
 
       - name: Create PR with rendered docs files
         uses: peter-evans/create-pull-request@v3
