--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -49,7 +49,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Get token
-        run: echo ${{ secrets.GIT_TOKEN }} > docker/git_token.txt
+        run: echo ${{ secrets.GH_PAT }} > docker/git_token.txt
 
       # Build docker image
       - name: Build Docker image
