Attempt to fix IF statement in starting-template.yml

--- a/.github/workflows/starting-template.yml
+++ b/.github/workflows/starting-template.yml
@@ -11,7 +11,7 @@ jobs:
   template-cleanup:
     name: Template Cleanup
     runs-on: ubuntu-latest
-    if: github.event.repository.name != 'jhudsl/DaSL_Course_Template_Bookdown'
+    if: ${{ github.event.repository.name != 'jhudsl/DaSL_Course_Template_Bookdown' }}
     steps:
 
       # Check out current repository
@@ -21,6 +21,7 @@ jobs:
       # Cleanup project
       - name: Cleanup
         run: |
+          echo ${{github.event.repository.name}}
           # Cleanup
           rm -rf \
             .github/workflows/downstream-mechanics-update.yml \
@@ -28,7 +29,7 @@ jobs:
             .github/workflows/starting-template.yml \
 
       # Commit modified files
-      - name: Commit files
+      - name: Commit deleted files
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
