--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -5,6 +5,7 @@ group:
   # Repositories to recieve changes
   repos: |
     jhudsl/ITCR_Documentation_and_Usability
+#ADD NEW REPO HERE following the format above#
   # Files which should be updated
   files:
   - .github/workflows/render-bookdown.yml
@@ -15,3 +16,19 @@ group:
   - docker/*
   - scripts/*
   - getting_started.md
+
+###### TO ADD NEW REPOSITORY USE THIS FORMAT; Feel free to add/drop files that
+# you specifically would like synced (or not).
+#
+#  # Repositories to receive changes
+#  repos: |
+#    org/repo_name
+#  # Files which should be updated
+#  files:
+#  - .github/workflows/render-leanpub.yml
+#  - .github/workflows/sp-check.yml
+#  - .github/workflows/url-checker.yml
+#  - .github/workflows/ISSUE_TEMPLATES/issue_template.md
+#  - .github/workflows/PULL_REQUEST_TEMPLATE.md
+#  - scripts/*
+#  - getting_started.md
