--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -6,6 +6,7 @@ rmd_files: ["index.Rmd",
             "02-chapter_of_course.Rmd",
             "About.Rmd"]
 new_session: yes
+bibliography: [book.bib, packages.bib]
 delete_merged_file: true
 language:
   ui:
