--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -80,7 +80,7 @@ jobs:
           docker run \
           --mount type=bind,target=/home/rstudio,source=$PWD \
           jhudsl/course_template \
-          Rscript -e "bookdown::render_book('index.Rmd')"
+          Rscript --vanilla "scripts/render_all_coursera.R"
 
       # Commit the rendered bookdown files
       - name: Commit rendered bookdown files
