--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -74,6 +74,16 @@ jobs:
           jhudsl/course_template \
           Rscript -e "bookdown::render_book('index.Rmd')"
 
+##### If you do not wish to host your course on Coursera, you can delete this section #####
+      # Run Coursera version
+      - name: Run Coursera version of render
+        run: |
+          docker run \
+          --mount type=bind,target=/home/rstudio,source=$PWD \
+          jhudsl/course_template \
+          Rscript --vanilla "scripts/render_all_coursera.R"
+##### End of Coursera rendering section ########################################
+
       # Commit the rendered bookdown files
       - name: Commit rendered bookdown files
         run: |
