Add to GHA and update documentation

--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -81,7 +81,7 @@ jobs:
           docker run \
           --mount type=bind,target=/home/rstudio,source=$PWD \
           jhudsl/course_template \
-          Rscript --vanilla "scripts/render_all_coursera.R"
+          Rscript --vanilla "scripts/render_coursera.R"
 ##### End of Coursera rendering section ########################################
 
       # Commit the rendered bookdown files
