Also transfer _output yamls and update PR description  (#191)
* Add screenshots and in progress instructions to getting_started.md

* Add more instructions!

* doctoc it!

* Edit wording

* Add warning about Google Slides permissions

* Add instructions about tailoring syncs

* Update link

* Reorganize so code_output is inside `resources`

* Also add _output.ymls

* Update PR description

--- a/.github/workflows/transfer-rendered-files.yml
+++ b/.github/workflows/transfer-rendered-files.yml
@@ -52,6 +52,10 @@ jobs:
           # Copy over _bookdown.yml
           svn export --force https://github.com/${GITHUB_REPOSITORY}.git/branches/${GITHUB_REF#refs/heads/}/_bookdown.yml
 
+          # Copy over _output.ymls
+          svn export --force https://github.com/${GITHUB_REPOSITORY}.git/branches/${GITHUB_REF#refs/heads/}/_output.yml
+          svn export --force https://github.com/${GITHUB_REPOSITORY}.git/branches/${GITHUB_REF#refs/heads/}/_output_coursera.yml
+
           # Copy over images folder
           svn export --force https://github.com/${GITHUB_REPOSITORY}.git/branches/${GITHUB_REF#refs/heads/}/resources/ resources/
 
@@ -88,7 +92,9 @@ jobs:
                - _bookdown.yml
                - docs/*
                - book.bib
-               - resources/images/*
+               - resources/*
+               - _output.yml 
+               - _output_coursera.yml
           labels: |
             automated
           reviewers: $GITHUB_ACTOR
