Let's see how this works

--- a/.github/workflows/starting-course.yml
+++ b/.github/workflows/starting-course.yml
@@ -55,7 +55,8 @@ jobs:
           rm -rf \
             .github/workflows/downstream-mechanics-updates.yml \
             .github/sync.yml \
-            .github/workflows/starting-course.yml
+            .github/workflows/starting-course.yml \
+            .github/ISSUE_TEMPLATES/config.yml
 
       # Commit modified files
       - name: Commit deleted files
